// org.elasticsoftware.akces.protocol.AggregateStateRecord

// Message for org.elasticsoftware.akces.protocol.AggregateStateRecord
message AggregateStateRecord {
  optional string name = 1;
  optional int32 version = 2;
  optional bytes payload = 3;
  optional PayloadEncoding encoding = 4;
  optional string aggregateId = 5;
}
// Enum for org.elasticsoftware.akces.protocol.PayloadEncoding
enum PayloadEncoding {
  JSON = 0;
  PROTOBUF = 1;
}